--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>Let's Code</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -21,6 +21,8 @@
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+
+    <link rel="stylesheet" href="./style.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -41,7 +43,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">Let's Code</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -51,7 +53,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#slides">Google Slides</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#videos">Class Videos</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
@@ -71,11 +76,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive" src="img/webdevelopment.png" alt="Web Development" height="250" width="250">
                     <div class="intro-text">
-                        <span class="name">Start Bootstrap</span>
+                        <span class="name">Let's Code</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">Web Development</span>
                     </div>
                 </div>
             </div>
@@ -83,14 +88,81 @@
     </header>
 
     <!-- Portfolio Grid Section -->
-    <section id="portfolio">
-        <div class="container">
+    <section id="slides">
+        <div class="container center">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>Google Slides</h2>
                     <hr class="star-primary">
                 </div>
             </div>
+          </div>
+            <!--
+            <div class="row text-center">
+              <iframe src="https://docs.google.com/presentation/d/18NAGxIGFeZ_6e5FEGPqoANhH_Q8ae7N7mZIIL9iiYnM/embed?start=true&loop=false&delayms=3000" frameborder="0" width="570" height="350" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            </div>
+            <div class="row text-center">
+              <iframe src="https://docs.google.com/presentation/d/1R4teU411Jagqv9PWQHRvFB7pJ5mqOpN44FMeb9CAdlg/embed?start=true&loop=false&delayms=3000" frameborder="0" width="570" height="350" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            </div>
+            <div class="row text-center">
+              <iframe src="https://docs.google.com/presentation/d/1fJwR2K1rWRcgRya4dzUSpbJbLTxhbem_CwcMEURuTwM/embed?start=true&loop=false&delayms=3000" frameborder="0" width="570" height="350" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            </div>
+            <div class="row text-center">
+              <iframe src="https://docs.google.com/presentation/d/17zqM34l-0AC0jW4H44SYm34BhQrl80vTANAFMy9A1XE/embed?start=true&loop=false&delayms=3000" frameborder="0" width="570" height="350" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            </div>-->
+
+            <!--CAROUSEL-->
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+              <!-- Indicators -->
+            <div class="row">
+              <ol class="carousel-indicators data-wrap="true"">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+              </ol>
+              <!-- Wrapper for slides -->
+              <div class="carousel-inner text-center" role="listbox">
+                <div class="item active">
+                  <iframe src="https://docs.google.com/presentation/d/18NAGxIGFeZ_6e5FEGPqoANhH_Q8ae7N7mZIIL9iiYnM/embed?start=true&loop=false&delayms=3000" frameborder="0" width="570" height="350" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                  <div class="carousel-caption">
+                    <h4>Course 1</h4>
+                  </div>
+                </div>
+                <div class="item">
+                  <iframe src="https://docs.google.com/presentation/d/1R4teU411Jagqv9PWQHRvFB7pJ5mqOpN44FMeb9CAdlg/embed?start=true&loop=false&delayms=3000" frameborder="0" width="570" height="350" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                  <div class="carousel-caption">
+                    <h4>Course 2</h4>
+                  </div>
+                </div>
+                <div class="item">
+                  <iframe src="https://docs.google.com/presentation/d/1fJwR2K1rWRcgRya4dzUSpbJbLTxhbem_CwcMEURuTwM/embed?start=true&loop=false&delayms=3000" frameborder="0" width="570" height="350" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                  <div class="carousel-caption">
+                    <h4>Course 3</h4>
+                  </div>
+                </div>
+                <div class="item">
+                  <iframe src="https://docs.google.com/presentation/d/17zqM34l-0AC0jW4H44SYm34BhQrl80vTANAFMy9A1XE/embed?start=true&loop=false&delayms=3000" frameborder="0" width="570" height="350" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                  <div class="carousel-caption">
+                    <h4>Course 4</h4>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Controls -->
+              <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          </div>
+
+
+
+
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
