Add Week 4 Lecture Intro to JS
Introduction to Javascripit and Programming 101. Added slides and video
class.

--- a/index.html
+++ b/index.html
@@ -110,9 +110,8 @@
       <div class="row text-center">
         <div>
           <h3>Course 4: Intro to JavaScript + Programming 101</h3></div>
-        <iframe src="https://docs.google.com/presentation/d/17zqM34l-0AC0jW4H44SYm34BhQrl80vTANAFMy9A1XE/embed?start=false&loop=false&delayms=3000" frameborder="0" width="570" height="350" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        <iframe src="https://docs.google.com/presentation/d/1bEZjbONGXTv93efoczttikNEeHn56mhRzqikdK-cQeY/embed?start=false&loop=false&delayms=3000" frameborder="0" width="570" height="350" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
       </div>
-    </div>
   </section>
 
   <!--Videos Section-->
@@ -125,22 +124,29 @@
         </div>
       </div>
       <div class="row text-center">
-        <div><h3>Course 1: Getting Started with GitHub Desktop</h3></div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Q5bcJWVCNbM" frameborder="0" allowfullscreen></iframe>
+        <div>
+          <h3>Course 1: Getting Started with GitHub Desktop</h3></div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Q5bcJWVCNbM" frameborder="0" allowfullscreen></iframe>
       </div>
       <div class="row text-center">
-        <div><h3>Course 2: HTML Basics</h3></div>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/aovji2QxYAo" frameborder="0" allowfullscreen></iframe>
+        <div>
+          <h3>Course 2: HTML Basics</h3></div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/aovji2QxYAo" frameborder="0" allowfullscreen></iframe>
       </div>
       <div class="row text-center">
-        <div><h3>Course 3: CSS Basics</h3></div>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/-ccOcyqLgws" frameborder="0" allowfullscreen></iframe>
+        <div>
+          <h3>Course 3: CSS Basics</h3></div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/-ccOcyqLgws" frameborder="0" allowfullscreen></iframe>
+      </div>
+      <div class="row text-center">
+        <div>
+          <h3>Course 4: Intro to JavaScript + Programming 101</h3></div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/7JRvHIZiSSY?ecver=1" frameborder="0" allowfullscreen></iframe>
       </div>
 
 
     </div>
   </section>
-
 
   <!--CAROUSEL
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
@@ -255,8 +261,8 @@
           </div>
           <div class="footer-col col-md-4">
             <h3>Meeting Location & Time</h3>
-            <p>When: Wednesdays from 6:30-7:30PM
-              <br>Where: Jordan Hall of Science Room 105</p>
+            <p>When: Wednesdays from 7:00pm-7:30PM
+              <br>Where: Jordan Hall of Science Room 101</p>
           </div>
         </div>
       </div>
