--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       <div class="row">
         <div class="col-lg-4">
           <div>
-            <p>Instructor: Jorge Nazario</p>
+            <p>Director: Jorge Nazario</p>
           </div>
           <div>
             <p>Hey guys, I am Sophomore majoring in Computer Science. As an "Intermediate Level" web developer, my main role in this team is to compile lectures that are both informative and simple to understand for unexperienced students in web development.
@@ -220,10 +220,10 @@
           </div>
         </div>
         <div class="col-lg-4 text-center">
-          <p>Instructor: Will Badart</p>
+          <p>Director: Will Badart</p>
         </div>
         <div class="col-lg-4 text-center">
-          <p>Let's Code Director: Arturo Prestamo</p>
+          <p>Director: Arturo Prestamo</p>
         </div>
       </div>
     </div>
