--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
           </div>
           <div class="footer-col col-md-4">
             <h3>Meeting Location & Time</h3>
-            <p>When: Wednesdays from 7:00pm-7:30PM
+            <p>When: Wednesday 7:00pm-7:30PM
               <br>Where: Jordan Hall of Science Room 101</p>
           </div>
         </div>
