adding arturo bio

--- a/index.html
+++ b/index.html
@@ -222,9 +222,15 @@
         <div class="col-lg-4 text-center">
           <p>Director: Will Badart</p>
         </div>
-        <div class="col-lg-4 text-center">
+        <div class="col-lg-4">
+          <div>
           <p>Director: Arturo Prestamo</p>
         </div>
+          <div>
+            <p>Hello Coders! My name is Arturo Prestamo, I am a sophomore mechanical engineering major from Monterrey, Mexico. I am currently the STEM director of SIBC. My hobbies include running, reading, and photography. Welcome to Let's Code!</p>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
