Course 5: Intro to Jquery

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
   </header>
 
-  <!-- Portfolio Grid Section -->
+  <!-- Google Slides -->
   <section id="slides">
     <div class="container center">
       <div class="row">
@@ -112,6 +112,12 @@
           <h3>Course 4: Intro to JavaScript + Programming 101</h3></div>
         <iframe src="https://docs.google.com/presentation/d/1bEZjbONGXTv93efoczttikNEeHn56mhRzqikdK-cQeY/embed?start=false&loop=false&delayms=3000" frameborder="0" width="570" height="350" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
       </div>
+      <div class="row text-center">
+        <div>
+          <h3>Course 5: Intro to jQuery Components</h3></div>
+        <iframe src="https://docs.google.com/presentation/d/17zqM34l-0AC0jW4H44SYm34BhQrl80vTANAFMy9A1XE/embed?start=false&loop=false&delayms=3000" frameborder="0" width="570" height="350" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+      </div>
+
   </section>
 
   <!--Videos Section-->
@@ -143,7 +149,11 @@
           <h3>Course 4: Intro to JavaScript + Programming 101</h3></div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/7JRvHIZiSSY?ecver=1" frameborder="0" allowfullscreen></iframe>
       </div>
-
+      <div class="row text-center">
+        <div>
+          <h3>Course 5: Intro to jQuery Components</h3></div>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/Puy86wwqIEs" frameborder="0" allowfullscreen></iframe>
+      </div>
 
     </div>
   </section>
