Add class 7 video and slides
Class on coding with a template

--- a/index.html
+++ b/index.html
@@ -117,6 +117,11 @@
           <h3>Course 5: Intro to jQuery Components</h3></div>
         <iframe src="https://docs.google.com/presentation/d/17zqM34l-0AC0jW4H44SYm34BhQrl80vTANAFMy9A1XE/embed?start=false&loop=false&delayms=3000" frameborder="0" width="570" height="350" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
       </div>
+      <div class="row text-center">
+        <div>
+          <h3>Course 6: Front-End Framework Templates</h3></div>
+        <iframe src="https://docs.google.com/presentation/d/1zMXqF2e1J-6jydxo0SaySi5J9V3VUPowlRIYtu-esf8/embed?start=false&loop=false&delayms=3000" frameborder="0" width="570" height="350" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+      </div>
 
   </section>
 
@@ -156,8 +161,14 @@
       </div>
 
     </div>
-  </section>
+    <div class="row text-center">
+        <div>
+          <h3>Course 6: Front-End Framework Templates</h3></div>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/EEJEDzRsCdU" frameborder="0" allowfullscreen></iframe>
+      </div>
 
+    </div>
+  </section>
   <!--CAROUSEL
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
             <!--Indicators
